amf-cli/shared/src/test/resources/parser-results/raml/error/cycle-references/base.raml
#%RAML 1.0 Library
types:
  Phone: !include typeFragment.raml